--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "mysql2": "^3.14.0",
+    "nodemon": "^3.1.10",
     "websocket": "^1.0.35",
     "ws": "^8.18.1"
   },
