--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "server",
   "main": "index.js",
   "scripts": {
-    "test": "testit"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "author": "Béla Langner",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.5.0",
     "mysql2": "^3.14.0",
     "nodemon": "^3.1.10",
     "websocket": "^1.0.35",
